Implement to query menu and widgets, trigger menu

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,7 @@ configure_file(
 
 set(PLUGIN_SOURCES
 	src/plugin-main.c
+	src/menu.cc
 )
 
 add_library(${PROJECT_NAME} MODULE ${PLUGIN_SOURCES})
